--- a/language-specs/doctest.lang
+++ b/language-specs/doctest.lang
@@ -5,6 +5,7 @@
  Copyright (C) 2003 Gustavo Giráldez <gustavo.giraldez@gmx.net>
  Copyright (C) 2004 Benoît Dejean <TaZForEver@free.fr>
  Copyright (C) 2006 Steve Frécinaux <nud@apinc.org>
+ Copyright (C) 2009 Curtis Hovey <sinzui.is@verizon.net>
 
  This library is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
@@ -134,7 +135,7 @@
         <context ref="multiline-single-quoted-string"/>
         <context ref="double-quoted-string"/>
         <context ref="single-quoted-string"/>
-        
+
         <context id="whitespace" style-ref="whitespace">
 	      <match>(\s+$)</match>
         </context>
