--- a/language-specs/ini.lang
+++ b/language-specs/ini.lang
@@ -3,6 +3,7 @@
 
  Author: Antonio Ognio <gnrfan@gnrfan.org>
  Copyright (C) 2005 Antonio Ognio <gnrfan@gnrfan.org>
+ Copyright (C) 2009 Curtis Hovey <sinzui.is@verizon.net>
 
  This library is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
