--- a/language-specs/moin.lang
+++ b/language-specs/moin.lang
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
- Author: Gustavo Giráldez <gustavo.giraldez@gmx.net>
- Copyright (C) 2003 Gustavo Giráldez <gustavo.giraldez@gmx.net>
- Copyright (C) 2004 Benoît Dejean <TaZForEver@free.fr>
- Copyright (C) 2006 Steve Frécinaux <nud@apinc.org>
+ Copyright (C) 2009 Curtis Hovey <sinzui.is@verizon.net>
 
  This library is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
