--- a/language-specs/pagetemplate.lang
+++ b/language-specs/pagetemplate.lang
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
- Authors: Marco Barisione, Emanuele Aina
- Copyright (C) 2005-2007 Marco Barisione <barisione@gmail.com>
- Copyright (C) 2005-2007 Emanuele Aina
+ Authors: Curtis Hovey
+ Copyright (C) 2009 Curtis Hovey <sinzui.is@verizon.net>
 
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Library General Public
