--- a/README
+++ b/README
@@ -23,8 +23,8 @@ for software development. GDP provides:
 See screenshots at http://curtis.hovey.name/gallery/Sinzui/gdp-2-26-1
 
 
-Installation
-------------
+Installation from tarball
+-------------------------
 
 To install the plugins for personal use (in your home directory),
 run the following commands from a terminal:
