--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+gdp-2.28.0: UI and stability improvements
+=========================================
+
+XXX sinzui 2009-10-10: Write this from the milestone.
+
+See screenshots at http://curtis.hovey.name/gallery/Sinzui/gdp-2-28-1
+Get the tarball at https://launchpad.net/gdp/trunk/0.2
+
+
 gdp-2.26.1: The first release
 =============================
 
