--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-gdp-2.28.0: UI and stability improvements
-=========================================
+gdp-2.28.0 (0.2): UI and stability improvements
+===============================================
 
 This release improves the user experience of the four plugins:
 
