--- a/README
+++ b/README
@@ -10,8 +10,10 @@ for software development. GDP provides:
       supported.
     * Syntax completion
       Python completion using the file's imports and definitions. Simple
-      word completion based on the words in the file.
-      Use <Shift><Control>Space to activate the snippet completer window.
+      word completion based on the words in the file. XML-based markup
+      completion will suggest open tag, close tags, and attributes based on
+      the cursor's position.
+      Use <Control>Slash (Ctrl+/) to activate the snippet completer window.
     * Formatting
       Format paragraphs, lists, and imports. Reformat test using regular
       expressions. Check the syntax and style of Python, XML, and plain
