--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,10 @@
-gdp-2.28.0 (0.3.1): Markup completion
-===================================
+gdp-0.3.1 (2.28.0): Markup completion
+=====================================
 
 This release adds XML-based markup completion.
 
     * Detection is based on the language/highlighting of the document.
-      The supported languages are: XML, XSLT, HTML, Malard, Docbook, and
+      The supported languages are: XML, XSLT, HTML, Mallard, Docbook, and
       Zope page templates.
     * When opening a tag, the completer suggests other open or empty tags
       that are already in the document.
@@ -26,7 +26,7 @@ Important changes.
 
 
 
-gdp-2.28.0 (0.2): UI and stability improvements
+gdp-0.2 (2.28.0): UI and stability improvements
 ===============================================
 
 This release improves the user experience of the four plugins:
@@ -58,8 +58,8 @@ See screenshots at http://curtis.hovey.name/gallery/Sinzui/gdp-2-28-0
 Get the tarball at https://launchpad.net/gdp
 
 
-gdp-2.26.1: The first release
-=============================
+gdp-0.1 (2.26.1): The first release
+===================================
 
 Gedit-developer-plugins (GDP) are a set of plugins for gedit that provide
 additional editing features for software development. GDP provides:
