Added fulljslint to style checker.

--- a/README
+++ b/README
@@ -56,3 +56,4 @@ pocket-lint includes the work of other projects when it simplifies
 dependencies.
     * pep8.py (Expat license)
     * pyflakes (MIT license)
+    * fulljslint (MIT-style license)
