Removed unused format module. Incremented the version.

--- a/HACKING
+++ b/HACKING
@@ -16,3 +16,21 @@ Code style
 
 Python is expected to conform with PEP8, and running pocket-lint on itself
 should report no issues.
+
+
+Integrating pocket-lint to another tool
+---------------------------------------
+
+The three minimal lines required to check the format of a source file are:
+
+    from pocketlint.checkformat import Reporter, check_sources
+    reporter = Reporter(Reporter.CONSOLE)
+    check_sources(sources, reporter)
+
+`sources` is a list of file paths. `reporter` is the mechanism used to report
+issues. Reporter is a sink; the checkers do not know or care about what
+happens. You can implement your own Reporter by providing this signature:
+
+    class MyReporter:
+        def __call__(self, line_no, message, icon=None,
+                     base_dir=None, file_name=None):
