--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pocket-lint (0.5.24-0gdp) oneirc; urgency=low
+
+  * New upstream release fixes LP:920503
+
+ -- Curtis C. Hovey <sinzui.is@verizon.net>  Mon, 23 Jan 2012 10:47:38 -0500
+
 pocket-lint (0.5.23-0gdp) oneirc; urgency=low
 
   * New upstream release fixes LP:912130, LP:915242, LP:619925
