--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pocket-lint (0.5.28-0gdp) precise; urgency=low
+
+  * New upstream release fixes LP:925208
+
+ -- Curtis C. Hovey <sinzui.is@verizon.net>  Fri, 03 Feb 2012 08:30:13 -0500
+
 pocket-lint (0.5.27-0gdp) precise; urgency=low
 
   * New upstream release fixes LP:922840, LP:923300, LP:923309
