--- a/README
+++ b/README
@@ -14,6 +14,8 @@ features:
       * XML/HTML style and entities
       * CSS style
       * JavaScript syntax and style
+      * JSON data structure syntax
+      * reStructured Text style
       * Plain text
     * Supports reporting:
       * Python doctests
@@ -57,5 +59,4 @@ Contrib
 pocket-lint includes the work of other projects when it simplifies
 dependencies.
     * pep8.py (Expat license)
-    * pyflakes (MIT license)
     * fulljslint (MIT-style license)
