--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pocket-lint (1.4.0-0gdp) raring; urgency=low
+
+  * New upstream: Fixes LP:1127431 (Cannot compile python that uses print
+    keyword).
+
+ -- Curtis C. Hovey <sinzui.is@verizon.net>  Sat, 16 Feb 2013 14:03:25 -0500
+
 pocket-lint (1.3.0-0gdp) raring; urgency=low
 
   * New upstream: Refactors UTF-8 encoding. fixes LP:1121426
