--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-pocket-lint (1.4.2-1gdp) trusty; urgency=low
+pocket-lint (1.4.3-0gdp) trusty; urgency=low
 
-  * Provides python2 and python3 versions.
+  * New upstream release: 1.4.3. with rudimentary go support.
+    Provides python2 and python3 versions.
 
  -- Curtis C. Hovey <sinzui.is@gmail.com>  Wed, 23 Oct 2013 01:17:16 -0000
 
